# OBDII-ESP32

./: README.md  obdII_wifi.ino
src/core/: obd2.c  obd2.h  obd2_diag.c  obd2_internal.h  obd2_pids.c
src/isotp/: isotp.c  isotp.h
src/obd2/: obd2.c  obd2.h  obd2_diag.c  obd2_internal.h  obd2_pids.c
src/web/: dashboard.h  ws_commands.cpp  ws_handler.cpp  ws_handler.h
unit_tests_pc/: CMakeLists.txt  build.sh
unit_tests_pc/interpreter/: full_test_sequence_v2.txt
unit_tests_pc/mocks/: esp_err.h  mock_twai.c  mock_twai.h
unit_tests_pc/mocks/driver/: twai.h
unit_tests_pc/mocks/freertos/: FreeRTOS.h  task.h
unit_tests_pc/tests/: test_isotp.c  test_main.c  test_obd2_diag.c  test_obd2_modes.c  test_obd2_pids.c
